[gd_scene load_steps=3 format=2]

[ext_resource path="res://вопросы/QuastionInput.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/lineEditFont.tres" type="DynamicFont" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "варианты ответа"
items = [ "варианты ответа", null, false, 0, null, "ввод ответа", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 236.0
rect_min_size = Vector2( 0, 200 )
custom_colors/font_color = Color( 0.101961, 0.992157, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load texture" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 1024.0
margin_bottom = 272.0
custom_fonts/font = ExtResource( 2 )
text = "загрузить картинку для задания"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 1024.0
margin_bottom = 308.0

[node name="Button1" type="Button" parent="MarginContainer/VBoxContainer/options"]
margin_right = 167.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Вариант 1"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/options"]
margin_left = 171.0
margin_right = 338.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Вариант 2"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/options"]
margin_left = 342.0
margin_right = 509.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Вариант 3"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/options"]
margin_left = 513.0
margin_right = 681.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Вариант 4"

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer/options"]
margin_left = 685.0
margin_right = 852.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Вариант 5"

[node name="Button6" type="Button" parent="MarginContainer/VBoxContainer/options"]
margin_left = 856.0
margin_right = 1024.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Вариант 6"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 1024.0
margin_bottom = 348.0
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Правильный ответ"
placeholder_alpha = 0.4

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 480.0
margin_top = 352.0
margin_right = 543.0
margin_bottom = 384.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
text = "save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png ; PNG", "*.jpg ; JPG", "*.jpeg ; JPEG" )
current_dir = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест"
current_path = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog1" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png ; PNG", "*.jpg ; JPG", "*.jpeg ; JPEG" )
current_dir = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест"
current_path = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog2" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png ; PNG", "*.jpg ; JPG", "*.jpeg ; JPEG" )
current_dir = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест"
current_path = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog3" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png ; PNG", "*.jpg ; JPG", "*.jpeg ; JPEG" )
current_dir = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест"
current_path = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog4" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png ; PNG", "*.jpg ; JPG", "*.jpeg ; JPEG" )
current_dir = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест"
current_path = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog5" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png ; PNG", "*.jpg ; JPG", "*.jpeg ; JPEG" )
current_dir = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест"
current_path = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog6" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png ; PNG", "*.jpg ; JPG", "*.jpeg ; JPEG" )
current_dir = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест"
current_path = "/Users/vsewhy/Documents/тест-20220413T182604Z-001/тест/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/Load texture" to="." method="_on_Load_texture_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="FileDialog1" to="." method="_on_FileDialog1_file_selected"]
[connection signal="file_selected" from="FileDialog1" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="FileDialog2" to="." method="_on_FileDialog2_file_selected"]
[connection signal="file_selected" from="FileDialog2" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="FileDialog3" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="FileDialog3" to="." method="_on_FileDialog3_file_selected"]
[connection signal="file_selected" from="FileDialog4" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="FileDialog4" to="." method="_on_FileDialog4_file_selected"]
[connection signal="file_selected" from="FileDialog5" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="FileDialog6" to="." method="_on_FileDialog_file_selected"]
